--- a/index.html
+++ b/index.html
@@ -22,6 +22,15 @@
   <center>
   <img id="avatar" src="img/icons/Devices.png" alt="avatar" />
   <p id="repo_p"><a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://zerodayios.github.io/">Add Repo To Cydia</a></p>
+  <!--ads-->
+     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+        <script>
+           (adsbygoogle = window.adsbygoogle || []).push({
+              google_ad_client: "ca-pub-6366575240723910",
+                  enable_page_level_ads: true
+                                                    });
+         </script>
+  
   </center>
 </div>
 
