--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <img class="grid_ipa" src="img/unc0ver.jpg" alt="img" />
     <p class="grid_p">Install</p>
     <p>Jailbreak ios 11.0-11.4(b3)</p>
-    <p style="color:#34aadc">Version: 2.0.1</p>
+    <p class="grid_t" style="color:#34aadc">Version: 2.0.1</p>
     </center>
     <br />
   </div></a>
@@ -67,7 +67,7 @@
     <img class="grid_ipa" src="img/Electra1131.jpg" alt="img" />
     <p class="grid_p">Install</p>
     <p>Jailbreak ios 11.2-11.4(b3)</p>
-    <p style="color:#34aadc">Version: 1.0.3</p>
+    <p class="grid_t" style="color:#34aadc">Version: 1.0.3</p>
     </center>
     <br />
   </div></a>
@@ -77,7 +77,7 @@
     <img class="grid_ipa" src="img/Electra1112.jpg" alt="img" />
     <p class="grid_p">Install</p>
     <p>Jailbreak ios 11.0-11.1.2</p>
-    <p style="color:#34aadc">Version: 1.0.4</p>
+    <p class="grid_t" style="color:#34aadc">Version: 1.0.4</p>
     </center>
     <br />
   </div></a>
@@ -87,7 +87,7 @@
     <img class="grid_ipa" src="img/doubleh3lix.jpg" alt="img" />
     <p class="grid_p">Install</p>
     <p>Jailbreak ios 10.0-10.3.3 (64bit-A7-A9)</p>
-    <p style="color:#34aadc">Version: 1.0</p>
+    <p class="grid_t" style="color:#34aadc">Version: 1.0</p>
     </center>
     <br />
   </div></a>
@@ -97,7 +97,7 @@
     <img class="grid_ipa" src="img/pangu.jpg" alt="img" />
     <p class="grid_p">Install</p>
     <p>Jailbreak ios 9.2-9.3.3</p>
-    <p style="color:#34aadc">Version: 1.1</p>
+    <p class="grid_t" style="color:#34aadc">Version: 1.1</p>
     </center>
     <br />
   </div></a>
@@ -125,7 +125,7 @@
     <img class="grid_img" src="img/anemone.jpg" alt="img" />
     <p class="grid_p">Tweak: Anemone</p>
     <p> </p>
-    <p style="color:#34aadc">Quản lý <br>theming tuyệt vời cho ios 7-11</p>
+    <p class="grid_t" style="color:#34aadc">Quản lý <br>theming tuyệt vời cho ios 7-11</p>
     </center>
     <br />
   </div></a>
@@ -135,7 +135,7 @@
     <img class="grid_img" src="img/ants.jpg" alt="img" />
     <p class="grid_p">Tweak: Ants</p>
     <p> </p>
-    <p style="color:#34aadc">tweak tạo những chú kiến con bò trên màn hình</p>
+    <p class="grid_t" style="color:#34aadc">tweak tạo những chú kiến con bò trên màn hình</p>
     </center>
     <br />
   </div></a>
@@ -145,7 +145,7 @@
     <img class="grid_img" src="img/homegesture.jpg" alt="img" />
     <p class="grid_p">Tweak: Homegesture</p>
     <p> </p>
-    <p style="color:#34aadc">mang tính năng đa nhiệm ipX lên các ip khác ios>=11</p>
+    <p class="grid_t" style="color:#34aadc">mang tính năng đa nhiệm ipX lên các ip khác ios>=11</p>
     </center>
     <br />
   </div></a>
@@ -155,7 +155,7 @@
     <img class="grid_img" src="img/littlex.jpg" alt="img" />
     <p class="grid_p">Tweak: LittleX</p>
     <p> </p>
-    <p style="color:#34aadc">giống như tweak Homegesture đem tính năng của ipX lên các ip khác ios>=11</p>
+    <p class="grid_t" style="color:#34aadc">đem tính năng của ipX lên các ip khác ios>=11</p>
     </center>
     <br />
   </div></a>
@@ -165,7 +165,7 @@
     <img class="grid_img" src="img/snowboard.jpg" alt="img" />
     <p class="grid_p">Tweak: Snowboard</p>
     <p> </p>
-    <p style="color:#34aadc">theming tuyệt vời tương thích ios 7-11.4(b3)</p>
+    <p class="grid_t" style="color:#34aadc">theming tuyệt vời tương thích ios 7-11.4(b3)</p>
     </center>
     <br />
   </div></a>
@@ -175,7 +175,7 @@
     <img class="grid_img" src="img/glacier.jpg" alt="img" />
     <p class="grid_p">Tweak: glacier</p>
     <p> </p>
-    <p style="color:#34aadc">tweak làm trong suốt ControlCenter ios >=11</p>
+    <p class="grid_t" style="color:#34aadc">tweak làm trong suốt ControlCenter ios >=11</p>
     </center>
     <br />
   </div></a>
@@ -185,7 +185,7 @@
     <img class="grid_img" src="img/cylinder.jpg" alt="img" />
     <p class="grid_p">Tweak: cylinder</p>
     <p> </p>
-    <p style="color:#34aadc">tweak tạo hiệu ứng chuyển trang ios 7-11</p>
+    <p class="grid_t" style="color:#34aadc">tweak tạo hiệu ứng chuyển trang ios 7-11</p>
     </center>
     <br />
   </div></a>
@@ -195,7 +195,7 @@
     <img class="grid_img" src="img/spinXI.jpg" alt="img" />
     <p class="grid_p">Tweak: SpinXI</p>
     <p> </p>
-    <p style="color:#34aadc">thay đổi giao diên phát nhạc LS ios 10-11</p>
+    <p class="grid_t" style="color:#34aadc">thay đổi giao diên phát nhạc LS ios 10-11</p>
     </center>
     <br />
   </div></a>
@@ -205,7 +205,7 @@
     <img class="grid_img" src="img/icleaner.gif" alt="img" />
     <p class="grid_p">Tweak: icleaner</p>
     <p> </p>
-    <p style="color:#34aadc">tweak dọn rác nổi tiếng trên ios 5-11</p>
+    <p class="grid_t" style="color:#34aadc">tweak dọn rác nổi tiếng trên ios 5-11</p>
     </center>
     <br />
   </div></a>
