--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <center>
     <img class="grid_ipa" src="img/unc0ver.jpg" alt="img" />
     <p class="grid_p">Install</p>
-    <p>Jailbreak ios 11.0-11.4(b3)</p>
+    <p class="grid_t"> Jailbreak ios 11.0-11.4(b3)</p>
     <p class="grid_t" style="color:#34aadc">Version: 2.0.1</p>
     </center>
     <br />
@@ -66,7 +66,7 @@
     <center>
     <img class="grid_ipa" src="img/Electra1131.jpg" alt="img" />
     <p class="grid_p">Install</p>
-    <p>Jailbreak ios 11.2-11.4(b3)</p>
+    <p class="grid_t">Jailbreak ios 11.2-11.4(b3)</p>
     <p class="grid_t" style="color:#34aadc">Version: 1.0.3</p>
     </center>
     <br />
@@ -76,7 +76,7 @@
     <center>
     <img class="grid_ipa" src="img/Electra1112.jpg" alt="img" />
     <p class="grid_p">Install</p>
-    <p>Jailbreak ios 11.0-11.1.2</p>
+    <p class="grid_t">Jailbreak ios 11.0-11.1.2</p>
     <p class="grid_t" style="color:#34aadc">Version: 1.0.4</p>
     </center>
     <br />
@@ -86,7 +86,7 @@
     <center>
     <img class="grid_ipa" src="img/doubleh3lix.jpg" alt="img" />
     <p class="grid_p">Install</p>
-    <p>Jailbreak ios 10.0-10.3.3 (64bit-A7-A9)</p>
+    <p class="grid_t">Jailbreak ios 10.0-10.3.3 (64bit-A7-A9)</p>
     <p class="grid_t" style="color:#34aadc">Version: 1.0</p>
     </center>
     <br />
@@ -96,7 +96,7 @@
     <center>
     <img class="grid_ipa" src="img/pangu.jpg" alt="img" />
     <p class="grid_p">Install</p>
-    <p>Jailbreak ios 9.2-9.3.3</p>
+    <p class="grid_t">Jailbreak ios 9.2-9.3.3</p>
     <p class="grid_t" style="color:#34aadc">Version: 1.1</p>
     </center>
     <br />
@@ -124,8 +124,7 @@
     <center>
     <img class="grid_img" src="img/anemone.jpg" alt="img" />
     <p class="grid_p">Tweak: Anemone</p>
-    <p> </p>
-    <p class="grid_t" style="color:#34aadc">Quản lý <br>theming tuyệt vời cho ios 7-11</p>
+    <p class="grid_t" style="color:#000000">Quản lý <br>theming tuyệt vời cho ios 7-11</p>
     </center>
     <br />
   </div></a>
@@ -134,8 +133,7 @@
     <center>
     <img class="grid_img" src="img/ants.jpg" alt="img" />
     <p class="grid_p">Tweak: Ants</p>
-    <p> </p>
-    <p class="grid_t" style="color:#34aadc">tweak tạo những chú kiến con bò trên màn hình</p>
+    <p class="grid_t" style="color:#000000">tweak tạo những chú kiến con bò trên màn hình</p>
     </center>
     <br />
   </div></a>
@@ -144,8 +142,7 @@
     <center>
     <img class="grid_img" src="img/homegesture.jpg" alt="img" />
     <p class="grid_p">Tweak: Homegesture</p>
-    <p> </p>
-    <p class="grid_t" style="color:#34aadc">mang tính năng đa nhiệm ipX lên các ip khác ios>=11</p>
+    <p class="grid_t" style="color:#000000">mang tính năng đa nhiệm ipX lên các ip khác ios>=11</p>
     </center>
     <br />
   </div></a>
@@ -154,8 +151,7 @@
     <center>
     <img class="grid_img" src="img/littlex.jpg" alt="img" />
     <p class="grid_p">Tweak: LittleX</p>
-    <p> </p>
-    <p class="grid_t" style="color:#34aadc">đem tính năng của ipX lên các ip khác ios>=11</p>
+    <p class="grid_t" style="color:#000000">đem tính năng của ipX lên các ip khác ios>=11</p>
     </center>
     <br />
   </div></a>
@@ -164,8 +160,7 @@
     <center>
     <img class="grid_img" src="img/snowboard.jpg" alt="img" />
     <p class="grid_p">Tweak: Snowboard</p>
-    <p> </p>
-    <p class="grid_t" style="color:#34aadc">theming tuyệt vời tương thích ios 7-11.4(b3)</p>
+    <p class="grid_t" style="color:#000000">theming tuyệt vời tương thích ios 7-11.4(b3)</p>
     </center>
     <br />
   </div></a>
@@ -174,8 +169,7 @@
     <center>
     <img class="grid_img" src="img/glacier.jpg" alt="img" />
     <p class="grid_p">Tweak: glacier</p>
-    <p> </p>
-    <p class="grid_t" style="color:#34aadc">tweak làm trong suốt ControlCenter ios >=11</p>
+    <p class="grid_t" style="color:#000000">tweak làm trong suốt ControlCenter ios >=11</p>
     </center>
     <br />
   </div></a>
@@ -183,9 +177,8 @@
   <a href="http://cydia.saurik.com/package/com.r333d.cylinder/"><div class="grid_cell">
     <center>
     <img class="grid_img" src="img/cylinder.jpg" alt="img" />
-    <p class="grid_p">Tweak: cylinder</p>
-    <p> </p>
-    <p class="grid_t" style="color:#34aadc">tweak tạo hiệu ứng chuyển trang ios 7-11</p>
+	<p class="grid_p">Tweak: Cylinder</p>
+    <p class="grid_t" style="color:#000000">tweak tạo hiệu ứng chuyển trang ios 7-11</p>
     </center>
     <br />
   </div></a>
@@ -194,8 +187,7 @@
     <center>
     <img class="grid_img" src="img/spinXI.jpg" alt="img" />
     <p class="grid_p">Tweak: SpinXI</p>
-    <p> </p>
-    <p class="grid_t" style="color:#34aadc">thay đổi giao diên phát nhạc LS ios 10-11</p>
+    <p class="grid_t" style="color:#000000">thay đổi giao diên phát nhạc LS ios 10-11</p>
     </center>
     <br />
   </div></a>
@@ -204,8 +196,7 @@
     <center>
     <img class="grid_img" src="img/icleaner.gif" alt="img" />
     <p class="grid_p">Tweak: icleaner</p>
-    <p> </p>
-    <p class="grid_t" style="color:#34aadc">tweak dọn rác nổi tiếng trên ios 5-11</p>
+    <p class="grid_t" style="color:#000000">tweak dọn rác nổi tiếng trên ios 5-11</p>
     </center>
     <br />
   </div></a>
