--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <center>
     <img class="grid_ipa" src="img/doubleh3lix.jpg" alt="img" />
     <p class="grid_p">Install</p>
-    <p class="grid_t">Jailbreak ios 10.0-10.3.3 (64bit-A7-A9)</p>
+    <p class="grid_t">Jailbreak ios 10.0-10.3.3(A7-A9)</p>
     <p class="grid_t" style="color:#34aadc">Version: 1.0</p>
     </center>
     <br />
