--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
     <br />
   </div></a>
   
-  <a href="itms-services://?action=download-manifest&url=https://zerodayios.github.io/package/electra1131.plist"><div class="grid_cellipa">
+  <a href="itms-services://?action=download-manifest&url=https://zerodayios.github.io/package/electra1131_1.0.3.plist"><div class="grid_cellipa">
     <center>
     <img class="grid_ipa" src="img/Electra1131.jpg" alt="img" />
     <p class="grid_p">Install</p>
     <p class="grid_t">Jailbreak ios 11.2-11.4(b3)</p>
-    <p class="grid_t" style="color:#34aadc">Version: 1.0.3</p>
+    <p class="grid_t" style="color:#34aadc">Version: 1.0.3-VFS</p>
     </center>
     <br />
   </div></a>
