--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <center>
     <img class="grid_ipa" src="img/unc0ver.jpg" alt="img" />
     <p class="grid_p">Install</p>
-    <p class="grid_t"> Jailbreak ios 11.0-11.4(b3)</p>
+    <p class="grid_t">Unc0ver 11.0-11.4(b3)</p>
     <p class="grid_t" style="color:#34aadc">Version: 2.0.1</p>
     </center>
     <br />
@@ -66,8 +66,8 @@
     <center>
     <img class="grid_ipa" src="img/Electra1131.jpg" alt="img" />
     <p class="grid_p">Install</p>
-    <p class="grid_t">Jailbreak ios 11.2-11.4(b3)</p>
-    <p class="grid_t" style="color:#34aadc">Version: 1.0.3-VFS</p>
+    <p class="grid_t">Electra1131-VFS</p>
+    <p class="grid_t" style="color:#34aadc">Version: 1.0.3</p>
     </center>
     <br />
   </div></a>
@@ -76,7 +76,7 @@
     <center>
     <img class="grid_ipa" src="img/Electra1112.jpg" alt="img" />
     <p class="grid_p">Install</p>
-    <p class="grid_t">Jailbreak ios 11.0-11.1.2</p>
+    <p class="grid_t">Electra1112</p>
     <p class="grid_t" style="color:#34aadc">Version: 1.0.4</p>
     </center>
     <br />
@@ -86,7 +86,7 @@
     <center>
     <img class="grid_ipa" src="img/doubleh3lix.jpg" alt="img" />
     <p class="grid_p">Install</p>
-    <p class="grid_t">Jailbreak ios 10.0-10.3.3(A7-A9)</p>
+    <p class="grid_t">doubleh3lix(ios10 A7-A9)</p>
     <p class="grid_t" style="color:#34aadc">Version: 1.0</p>
     </center>
     <br />
@@ -96,7 +96,7 @@
     <center>
     <img class="grid_ipa" src="img/pangu.jpg" alt="img" />
     <p class="grid_p">Install</p>
-    <p class="grid_t">Jailbreak ios 9.2-9.3.3</p>
+    <p class="grid_t">Pangu9 9.2-9.3.3</p>
     <p class="grid_t" style="color:#34aadc">Version: 1.1</p>
     </center>
     <br />
