--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <br />
   </div></a>
   
-  <a href="itms-services://?action=download-manifest&url=https://zerodayios.github.io/package/electra1131_1.0.3.plist"><div class="grid_cellipa">
+  <a href="itms-services://?action=download-manifest&url=https://zerodayios.github.io/package/electra1131.plist"><div class="grid_cellipa">
     <center>
     <img class="grid_ipa" src="img/Electra1131.jpg" alt="img" />
     <p class="grid_p">Install</p>
