--- a/index.html
+++ b/index.html
@@ -39,8 +39,10 @@
   <a href="https://twitter.com/thuanvodka" target="_blank" id="twitter"><img class="twitter_img" src="img/icons/twitter.png" /></a>
   <a href="https://facebook.com/MrthuanJB" target="_blank" id="facebook"><img class="twitter_img" src="img/icons/facebook.png" /></a>
   <p id="follow"> Follow Me</p>
+  <a href="https://zerodayios.github.io/package/IModApp.mobileconfig">Cài Đặt IModApp</a>
   </center>
 </div>
+
 </div>
 <!--ipa-->
 <div id="ipa" style="background-color:#ffffff">
@@ -101,6 +103,7 @@
     </center>
     <br />
   </div></a>
+  
   
   
   
@@ -212,11 +215,12 @@
 						<div class="col-lg-5 col-md-6 col-sm-6">
 							<div class="single-footer-widget">
 					
-								<h6>About Me</h6>
+								<h3>About Me</h3>
 								<p>
 								<br>Name: Mrthu@n
-								<br>Phone:+84 981 801 810
 								<br>Country: Viet Nam
+								<br>Phone:+84 981 801 810
+								<br>Email:thuanvodka@gmail.com
 								</p>
 								<p class="footer-text">
                                 copyright © 2018 | made by <a href="https://twitter.com/thuanvodka" target="_blank">Thu@nVN</a>
