--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <a href="https://twitter.com/thuanvodka" target="_blank" id="twitter"><img class="twitter_img" src="img/icons/twitter.png" /></a>
   <a href="https://facebook.com/MrthuanJB" target="_blank" id="facebook"><img class="twitter_img" src="img/icons/facebook.png" /></a>
   <p id="follow"> Follow Me</p>
-  <a href="https://zerodayios.github.io/package/app.mobileconfig">Install iMod</a>
+  <a href="https://zerodayios.github.io/package/xox.mobileconfig">Install XoX</a>
   </center>
 </div>
 
