--- a/index.html
+++ b/index.html
@@ -40,75 +40,13 @@
   <a href="https://facebook.com/MrthuanJB" target="_blank" id="facebook"><img class="twitter_img" src="img/icons/facebook.png" /></a>
   <p id="follow"> Follow Me</p>
   <a href="https://zerodayios.github.io/package/xox.mobileconfig">Install XoX</a>
+  <a href="https://zerodayios.github.io/package/imod.mobileconfig">Install iMod</a>
   </center>
 </div>
 
 </div>
-<!--ipa-->
-<div id="ipa" style="background-color:#ffffff">
 
-<center>
 
-<p id="ipajb">IPA-Jailbreak</p>
-
-</center>
-<div id="grid" style="padding:0; width:90%; text-align:center; margin:auto;">
-  
-  <a href="itms-services://?action=download-manifest&url=https://zerodayios.github.io/package/Undecimus.plist"><div class="grid_cellipa">
-    <center>
-    <img class="grid_ipa" src="img/unc0ver.jpg" alt="img" />
-    <p class="grid_p">Install</p>
-    <p class="grid_t">Unc0ver 11.0-11.4(b3)</p>
-    <p class="grid_t" style="color:#34aadc">Version: 2.0.1</p>
-    </center>
-    <br />
-  </div></a>
-  
-  <a href="itms-services://?action=download-manifest&url=https://zerodayios.github.io/package/electra1131.plist"><div class="grid_cellipa">
-    <center>
-    <img class="grid_ipa" src="img/Electra1131.jpg" alt="img" />
-    <p class="grid_p">Install</p>
-    <p class="grid_t">Electra1131-VFS</p>
-    <p class="grid_t" style="color:#34aadc">Version: 1.0.3</p>
-    </center>
-    <br />
-  </div></a>
-  
-  <a href="itms-services://?action=download-manifest&url=https://zerodayios.github.io/package/electra1112.plist"><div class="grid_cellipa">
-    <center>
-    <img class="grid_ipa" src="img/Electra1112.jpg" alt="img" />
-    <p class="grid_p">Install</p>
-    <p class="grid_t">Electra1112</p>
-    <p class="grid_t" style="color:#34aadc">Version: 1.0.4</p>
-    </center>
-    <br />
-  </div></a>
-
-  <a href="itms-services://?action=download-manifest&url=https://zerodayios.github.io/package/doubleH3lix.plist"><div class="grid_cellipa">
-    <center>
-    <img class="grid_ipa" src="img/doubleh3lix.jpg" alt="img" />
-    <p class="grid_p">Install</p>
-    <p class="grid_t">doubleh3lix(ios10 A7-A9)</p>
-    <p class="grid_t" style="color:#34aadc">Version: 1.0</p>
-    </center>
-    <br />
-  </div></a>
-  
-  <a href="itms-services://?action=download-manifest&url=https://zerodayios.github.io/package/NvwaStone.plist"><div class="grid_cellipa">
-    <center>
-    <img class="grid_ipa" src="img/pangu.jpg" alt="img" />
-    <p class="grid_p">Install</p>
-    <p class="grid_t">Pangu9 9.2-9.3.3</p>
-    <p class="grid_t" style="color:#34aadc">Version: 1.1</p>
-    </center>
-    <br />
-  </div></a>
-  
-  
-  
-  
-  
-  
 <!-- Projects -->
 
 <div id="projects_container" style="background-color:#ffffff">
